# gb.c

./: .clang-format  .gitignore  .gitmodules  .ignore  CMakeLists.txt  CMakePresets.json  README.md  export.sh  main.c  vcpkg.json
.github/workflows/: Linux-Workflow.yml  c-cpp.yml  cmake-multi-platform.yml
codegen/: README.md  pyproject.toml
codegen/codegen/: __main__.py
codegen/codegen/templates/: alu.jinja  backend.jinja  control_br_call.jinja  control_br_jump.jinja  flag_macro.jinja  lsm.jinja  preformed.jinja  rsb.jinja  stack.jinja
include/: backend.h  bus.h  cartridge.h  clock.h  cpu.h  fetcher.h  fifo.h  joypad.h  lcd.h  logger.h  mappers.h  mmio.h  ppu.h  registers.h  timer.h  types.h  utils.h  vbus.h
src/: bus.c  cartridge.c  clock.c  cpu.c  fetcher.c  joypad.c  main.c  mappers.c  mmio.c  ppu.c  timer.c
src/CPU/: backend.c  cpu.c
src/PPU/: fetcher.c  fifo.c  lcd.c  ppu.c  vbus.c
tests/: README.md  json_test_main.c  runner.py
